--- a/Project.Api/src/Project.Application/appsettings.json
+++ b/Project.Api/src/Project.Application/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;port=3306;DataBase=project;Uid=root;Pwd="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
