--- a/Project.Api/src/Project.Application/Application.csproj
+++ b/Project.Api/src/Project.Application/Application.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.5.0" />
   </ItemGroup>
 
   <ItemGroup>
