--- a/Project.Api/src/Project.Domain/Domain.csproj
+++ b/Project.Api/src/Project.Domain/Domain.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="7.5.2" />
+    <PackageReference Include="MediatR" Version="7.0.0" />
   </ItemGroup>
   
 </Project>
