--- a/Project.Api/src/Project.Services/Services.csproj
+++ b/Project.Api/src/Project.Services/Services.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="7.5.2" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
