--- a/Project.Api/src/Project.Klubin/Project.Klubin.csproj
+++ b/Project.Api/src/Project.Klubin/Project.Klubin.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -6,10 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Project.Services\Services.csproj" />
     <ProjectReference Include="..\Project.Domain\Domain.csproj" />
     <ProjectReference Include="..\Project.Infra.CrossCutting\CrossCutting.csproj" />
-    <ProjectReference Include="..\Project.Domain.Core\Domain.Core.csproj" />
   </ItemGroup>
+
 
 </Project>
