Adicionando front e ultimas alterações no back

--- a/Project.Api/src/Project.Application/Application.csproj
+++ b/Project.Api/src/Project.Application/Application.csproj
@@ -1,15 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Project.Domain\Domain.csproj" />
+    <ProjectReference Include="..\Project.Services\Services.csproj" />
+    <ProjectReference Include="..\Project.Domain.core\Domain.Core.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Project.Services\Services.csproj" />
-    <ProjectReference Include="..\Project.Domain\Domain.csproj" />
-    <ProjectReference Include="..\Project.Infra.CrossCutting\CrossCutting.csproj" />
-    <ProjectReference Include="..\Project.Domain.Core\Domain.Core.csproj" />
-  </ItemGroup>
 
 </Project>
