--- a/Project.Api/src/Project.Infra.CrossCutting/CrossCutting.csproj
+++ b/Project.Api/src/Project.Infra.CrossCutting/CrossCutting.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Project.Domain\Domain.csproj" />
     <ProjectReference Include="..\Project.Services\Services.csproj" />
+    <ProjectReference Include="..\Project.Application\Application.csproj" />
   </ItemGroup>
 
 </Project>
