--- a/Project.Api/src/Project.Klubin/Project.Klubin.csproj
+++ b/Project.Api/src/Project.Klubin/Project.Klubin.csproj
@@ -10,9 +10,8 @@
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.5.0" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Project.Services\Services.csproj" />
-    <ProjectReference Include="..\Project.Domain\Domain.csproj" />
+  <ItemGroup>    
+    <ProjectReference Include="..\Project.Application\Application.csproj" />
     <ProjectReference Include="..\Project.Infra.CrossCutting\CrossCutting.csproj" />
   </ItemGroup>
 
