--- a/Front/package.json
+++ b/Front/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "4.3.1",
     "@material-ui/icons": "4.2.1",
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.1",
     "clsx": "1.0.4",
     "eslint-config-standard": "^13.0.1",
@@ -19,6 +20,7 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react.qrcode.generator": "^0.0.3",
     "styled-components": "4.3.2"
   },
   "scripts": {
