--- a/Front/package.json
+++ b/Front/package.json
@@ -16,8 +16,10 @@
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-standard": "^4.0.0",
     "node-sass": "^4.12.0",
+    "package": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-qr-reader": "^2.2.1",
     "react-router": "^5.0.1",
     "react-scripts": "3.0.1",
     "react.qrcode.generator": "^0.0.3",
