--- a/Front/package.json
+++ b/Front/package.json
@@ -17,12 +17,12 @@
     "eslint-plugin-standard": "^4.0.0",
     "node-sass": "^4.12.0",
     "package": "^1.0.1",
+    "qrcode.react": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-qr-reader": "^2.2.1",
     "react-router": "^5.0.1",
     "react-scripts": "3.0.1",
-    "react.qrcode.generator": "^0.0.3",
     "styled-components": "4.3.2"
   },
   "scripts": {
